--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,2 +1,2 @@
 @library('etech-co-shared-library') _
-welcome, 'https://github.com/ETECH-Co/welcomeApp'
+welcomeApp, 'https://github.com/ETECH-Co/welcomeApp'
