--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,2 +1,2 @@
-@library('ETECH-Co/jenkins-shared-library') _
+@library('jenkins-shared-library') _
 welcomeApp 'https://github.com/ETECH-Co/welcomeApp'
